logs/mobility/build.make.088.log.stderr
In file included from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h: In member function ‘void DropOffController::setCenterDist(float)’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:33:37: error: ‘distanceToCenter’ was not declared in this scope
     void setCenterDist(float dist) {distanceToCenter = dist;}
                                     ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:23:0:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h: In member function ‘void DropOffController::setCenterDist(float)’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:33:37: error: ‘distanceToCenter’ was not declared in this scope
     void setCenterDist(float dist) {distanceToCenter = dist;}
                                     ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
